--- a/index.html
+++ b/index.html
@@ -80,6 +80,32 @@
     </style>
 </head>
 
+<!-- === INFORMASI KONTAK BANTUAN === -->
+<div id="contact-info" style="
+  background-color: #eef6ff;
+  border: 1px solid #b6d1ff;
+  border-radius: 10px;
+  padding: 10px 15px;
+  margin: 10px auto;
+  width: 95%;
+  max-width: 600px;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+">
+  <p style="margin: 6px 0; font-size: 15px; font-weight: 600;">
+    💬 Jika mengalami kendala, hubungi:
+  </p>
+  <p style="margin: 4px 0; font-size: 16px;">
+    📞 6282114273116
+  </p>
+  <p style="margin: 4px 0; font-size: 14px;">
+    🌐 <a href="https://linktr.ee/lkkpn_pekanbaru" target="_blank" style="color: #0077cc; text-decoration: underline;">
+      Lihat Linktree
+    </a>
+  </p>
+</div>    
+    
 <body>
 
     <div id="map"></div>
@@ -696,5 +722,6 @@ function sendSavedData(auto = false) {
 
     </script>
 </body>
+
 
 </html>
