--- a/index.html
+++ b/index.html
@@ -407,6 +407,8 @@
           `;
                     } else if (this.value === "Sebaran Bantuan Pemerintah") {
                         sub.innerHTML = `
+            <label for="pengisidata">Pengisi Data</label>
+            <input type="text" id="pengisidata">
             <label for="kategoripenerima">kategori penerima bantuan</label>
             <input type="text" id="kategoripenerima">
             <label for="kelompokpenerima">kelompok penerima bantuan</label>
@@ -725,3 +727,4 @@ function sendSavedData(auto = false) {
 
 
 </html>
+
