--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </p>
   <p style="margin: 4px 0; font-size: 14px;">
     🌐 <a href="https://linktr.ee/lkkpn_pekanbaru" target="_blank" style="color: #0077cc; text-decoration: underline;">
-      Lihat Linktree
+      Linktree LKKPN Pekanbaru
     </a>
   </p>
 </div>    
@@ -731,6 +731,7 @@ function sendSavedData(auto = false) {
 
 
 </html>
+
 
 
 
